# rust-switcher

./: .gitignore  AGENTS.md  Cargo.lock.audit  Cargo.toml  Justfile  README.md  app.manifest  app.rc  bacon.toml  build.rs  bundle.cmd  bundle.ps1  deny.toml  rust-toolchain.toml  spec.md  tasks.md
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/bump-cargo-version/: action.yml
.github/actions/commit-version-bump/: action.yml
.github/actions/gh-create-pr/: action.yml
.github/actions/gh-pr-approve/: action.yml
.github/actions/gh-pr-checks/: action.yml
.github/actions/gh-pr-merge/: action.yml
.github/actions/git-config-bot/: action.yml
.github/actions/install-ubuntu-packages/: action.yml
.github/actions/package-windows-zip/: action.yml
.github/actions/push-branch/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/tag-main-and-push/: action.yml
.github/workflows/: build-windows.yml  bump-version.yml  ci-windows.yml  ci.yml  dependabot-auto-merge.yml  promote.yml  publish-crates-io.yml  release-assets.yml  release-pr.yml  release.yml  tag-and-release.yml  test.yml  zizmor.yml
crates/rust-switcher-core/: Cargo.toml  README.md
crates/rust-switcher-core/src/text/: mapping.rs
docs/: e2e.md  releasing.md  spec.md  tasks.md
res/windows/: app.rc
scripts/: bacon_strict.ps1  release.ps1
scripts/release/: bump.ps1  publish.ps1
src/: app.rs  config.rs  config_validator.rs  constants.rs  conversion.rs  helpers.rs  hotkeys.rs  input.rs  input_journal.rs  lib.rs  main.rs  tray.rs  ui.rs  visuals.rs  win.rs
src/config/: config_validator.rs  constants.rs  raw_config.rs
src/conversion/: clipboard.rs  input.rs  last_word.rs  mapping.rs  mod.rs
src/core_tests/: mod.rs
src/domain/: mod.rs  outcome.rs
src/domain/text/: convert.rs  last_word.rs  mapping.rs  mod.rs  selection_probe.rs
src/input/: hotkeys.rs  ring_buffer.rs
src/platform/: ui.rs  win.rs
src/platform/ui/: error_notifier.rs  themes.rs
src/platform/win/: autostart.rs  commands.rs  hotkey_format.rs  keyboard.rs  menu_theme.rs  mouse.rs  state.rs  themes.rs  tray.rs  tray_dispatch.rs  visuals.rs  window.rs  winutil.rs
src/platform/win/keyboard/: capture.rs  debug_timers.rs  sequence.rs  vk.rs
src/tests/: config_io_tests.rs  config_validator_tests.rs  mapping_invariants_tests.rs  mod.rs  on_hotkey_tests.rs  ring_buffer_tests.rs
src/ui/: colors.rs  error_notifier.rs  geom.rs  info_notifier.rs  mod.rs
src/util/: tracing.rs
src/utils/: helpers.rs  tracing.rs
src/win/: commands.rs  keyboard.rs  mod.rs  state.rs
src/win/keyboard/: capture.rs  debug_timers.rs  keydown.rs  keyup.rs  mod.rs  vk.rs
tests/e2e/: requirements.txt  test_smoke.py
