[package]
name = "rust-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
confy = "2.0.0"
lingua = "1.7.2"
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", features = [
    "fmt",
    "env-filter",
], optional = true }


[features]
default = ["debug-tracing"]
debug-tracing = ["tracing", "tracing-subscriber"]


[build-dependencies]
windows = { version = "0.62.2", features = ["Win32_System_SystemServices"] }
embed-resource = "3.0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
