[package]
name = "rust-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_System_SystemInformation",
    "Win32_System_Ole",
] }
serde = { version = "1.0", features = ["derive"] }
confy = "2.0"
lingua = "1.7"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
], optional = true }
tracing-appender = "0.2"


[features]
default = ["debug-tracing"]
debug-tracing = ["tracing", "tracing-subscriber"]


[build-dependencies]
windows = { version = "0.62", features = ["Win32_System_SystemServices"] }
embed-resource = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tracing-test = "0.2.5"
