[package]
name = "rust-switcher"
version = "1.0.2"
edition = "2024"

description = "Windows keyboard layout switcher and text conversion utility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qqrm/rust-switcher"
homepage = "https://github.com/qqrm/rust-switcher"
readme = "README.md"
keywords = ["windows", "winapi", "keyboard", "hotkey", "tray"]
categories = ["gui", "os::windows-apis"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
confy = "2.0"
lingua = { version = "1.7", default-features = false, features = [
    "english",
    "russian",
] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
], optional = true }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_System_SystemInformation",
    "Win32_System_Ole",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi"
] }

[features]
default = ["debug-tracing"]
debug-tracing = ["tracing", "tracing-subscriber"]

[build-dependencies]
embed-resource = "3.0"

[target.'cfg(windows)'.build-dependencies]
windows = { version = "0.62", features = ["Win32_System_SystemServices"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
tracing-test = "0.2.5"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
