[package]
repository = "https://github.com/qqrm/rust-switcher"
description = "Core library for rust-switcher (Windows keyboard layout/typing conversion)."
name = "rust-switcher-core"
version = "1.0.4"
edition = "2024"
license = "MIT"
readme = "../../README.md"
keywords = ["windows", "keyboard", "layout", "text", "conversion"]
categories = ["text-processing", "os::windows-apis"]

[dependencies]
